--- a/esbuild/package.json
+++ b/esbuild/package.json
@@ -4,15 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "esbuild"
+    "build": "node build.mjs"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@esbuild-plugins/node-resolve": "^0.2.2",
     "esbuild": "0.19.8",
-    "esbuild-plugin-less": "^1.3.1",
-    "esbuild-plugin-node-externals": "^1.0.1"
+    "esbuild-plugin-less": "^1.3.1"
   }
 }
